force-app/main/default/objects/Log_Handler__mdt/Log_Handler__mdt.object-meta.xml
<CustomObject>
    <label>Log Handler</label>
    <pluralLabel>Log Handlers</pluralLabel>
</CustomObject>