force-app/main/default/objects/Log_Handler__mdt/fields/Logger__c.field-meta.xml
<CustomField>
    <fullName>Logger__c</fullName>
    <label>Logger</label>
    <referenceTo>Logger__mdt</referenceTo>
    <relationshipLabel>Log Handlers</relationshipLabel>
    <relationshipName>Log_Handlers</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>