force-app/main/default/objects/Log_Handler__mdt/fields/Setting__c.field-meta.xml
<CustomField>
    <fullName>Setting__c</fullName>
    <label>Setting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>